example/ffi/headers/rune.h

typedef struct IntegerOrErrorResult IntegerOrErrorResult_t;
/** \brief
 * Check if the result contains a `usize`.
 */
bool rune_result_IntegerOrErrorResult_is_ok(
    IntegerOrErrorResult_t const *result);
/** \brief
 * Check if the result contains a `BoxedError`.
 */
bool rune_result_IntegerOrErrorResult_is_err(
    IntegerOrErrorResult_t const *result);
/** \brief
 * Free the `IntegerOrErrorResult` after you are done with it.
 */
void rune_result_IntegerOrErrorResult_free(IntegerOrErrorResult_t *result);
/** \brief
 * Get a reference to the `usize` in this `IntegerOrErrorResult`, or `null` if
 * not present.
 */
size_t const *
rune_result_IntegerOrErrorResult_get_ok(IntegerOrErrorResult_t const *result);
typedef struct Error Error_t;
/** \brief
 * Get a reference to the `BoxedError` in this `IntegerOrErrorResult`, or `null`
 * if not present.
 */
Error_t *const *
rune_result_IntegerOrErrorResult_get_err(IntegerOrErrorResult_t const *result);
/** \brief
 * Extract the `usize`, freeing the `IntegerOrErrorResult` and crashing if it
 * actually contains a `BoxedError`.
 */
size_t rune_result_IntegerOrErrorResult_take_ok(IntegerOrErrorResult_t *result);
/** \brief
 * Extract the `BoxedError`, freeing the `IntegerOrErrorResult` and crashing if
 * it actually contains a `usize`.
 */
Error_t *
rune_result_IntegerOrErrorResult_take_err(IntegerOrErrorResult_t *result);
typedef struct CapabilityResult CapabilityResult_t;
/** \brief
 * Check if the result contains a `BoxedCapability`.
 */
bool rune_result_CapabilityResult_is_ok(CapabilityResult_t const *result);
/** \brief
 * Check if the result contains a `BoxedError`.
 */
bool rune_result_CapabilityResult_is_err(CapabilityResult_t const *result);
/** \brief
 * Free the `CapabilityResult` after you are done with it.
 */
void rune_result_CapabilityResult_free(CapabilityResult_t *result);
/** \brief
 *  Like [`slice_ref`] and [`slice_mut`], but with any lifetime attached
 *  whatsoever.
 *
 *  It is only intended to be used as the parameter of a **callback** that
 *  locally borrows it, due to limitations of the [`ReprC`][
 *  `trait@crate::layout::ReprC`] design _w.r.t._ higher-rank trait bounds.
 *
 *  # C layout (for some given type T)
 *
 *  ```c
 *  typedef struct {
 *      // Cannot be NULL
 *      T * ptr;
 *      size_t len;
 *  } slice_T;
 *  ```
 *
 *  # Nullable pointer?
 *
 *  If you want to support the above typedef, but where the `ptr` field is
 *  allowed to be `NULL` (with the contents of `len` then being undefined)
 *  use the `Option< slice_ptr<_> >` type.
 */
typedef struct {

  uint8_t *ptr;

  size_t len;

} slice_raw_uint8_t;
typedef struct {

  void *user_data;

  void (*set_parameter)(void *);

  IntegerOrErrorResult_t (*generate)(void *, slice_raw_uint8_t);

  void (*free)(void *);

} Capability_t;
/** \brief
 * Get a reference to the `BoxedCapability` in this `CapabilityResult`, or
 * `null` if not present.
 */
Capability_t *const *
rune_result_CapabilityResult_get_ok(CapabilityResult_t const *result);
/** \brief
 * Get a reference to the `BoxedError` in this `CapabilityResult`, or `null` if
 * not present.
 */
Error_t *const *
rune_result_CapabilityResult_get_err(CapabilityResult_t const *result);
/** \brief
 * Extract the `BoxedCapability`, freeing the `CapabilityResult` and crashing if
 * it actually contains a `BoxedError`.
 */
Capability_t *rune_result_CapabilityResult_take_ok(CapabilityResult_t *result);
/** \brief
 * Extract the `BoxedError`, freeing the `CapabilityResult` and crashing if it
 * actually contains a `BoxedCapability`.
 */
Error_t *rune_result_CapabilityResult_take_err(CapabilityResult_t *result);
typedef struct RunicosBaseImage RunicosBaseImage_t;
RunicosBaseImage_t *rune_image_new(void);
void rune_image_free(RunicosBaseImage_t *image);
typedef struct RuneResult RuneResult_t;
typedef struct {

  LogLevel_t level;

  slice_raw_uint8_t target;

  char *message;

} LogRecord_t;
typedef struct {

  void *env_ptr;

  RuneResult_t *(*call)(void *, LogRecord_t);

  void (*free)(void *);

} BoxDynFnMut1_RuneResult_ptr_LogRecord_t;
/** \brief
 *  Set the closure to be called when the Rune emits log messages.
 */
void rune_image_set_log(RunicosBaseImage_t *image,
                        BoxDynFnMut1_RuneResult_ptr_LogRecord_t log);
typedef struct {

  void *env_ptr;

  CapabilityResult_t *(*call)(void *);

  void (*free)(void *);

} BoxDynFnMut0_CapabilityResult_ptr_t;
void rune_image_set_raw(RunicosBaseImage_t *image,
                        BoxDynFnMut0_CapabilityResult_ptr_t raw);