example/rune_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// \brief
  /// Check if the result contains a `usize`.
  bool rune_result_IntegerOrErrorResult_is_ok(
    ffi.Pointer<IntegerOrErrorResult> result,
  ) {
    return _rune_result_IntegerOrErrorResult_is_ok(
          result,
        ) !=
        0;
  }

  late final _rune_result_IntegerOrErrorResult_is_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_IntegerOrErrorResult_is_ok>>(
          'rune_result_IntegerOrErrorResult_is_ok');
  late final _dart_rune_result_IntegerOrErrorResult_is_ok
      _rune_result_IntegerOrErrorResult_is_ok =
      _rune_result_IntegerOrErrorResult_is_ok_ptr
          .asFunction<_dart_rune_result_IntegerOrErrorResult_is_ok>();

  /// \brief
  /// Check if the result contains a `BoxedError`.
  bool rune_result_IntegerOrErrorResult_is_err(
    ffi.Pointer<IntegerOrErrorResult> result,
  ) {
    return _rune_result_IntegerOrErrorResult_is_err(
          result,
        ) !=
        0;
  }

  late final _rune_result_IntegerOrErrorResult_is_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_IntegerOrErrorResult_is_err>>(
          'rune_result_IntegerOrErrorResult_is_err');
  late final _dart_rune_result_IntegerOrErrorResult_is_err
      _rune_result_IntegerOrErrorResult_is_err =
      _rune_result_IntegerOrErrorResult_is_err_ptr
          .asFunction<_dart_rune_result_IntegerOrErrorResult_is_err>();

  /// \brief
  /// Free the `IntegerOrErrorResult` after you are done with it.
  void rune_result_IntegerOrErrorResult_free(
    ffi.Pointer<IntegerOrErrorResult> result,
  ) {
    return _rune_result_IntegerOrErrorResult_free(
      result,
    );
  }

  late final _rune_result_IntegerOrErrorResult_free_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_IntegerOrErrorResult_free>>(
          'rune_result_IntegerOrErrorResult_free');
  late final _dart_rune_result_IntegerOrErrorResult_free
      _rune_result_IntegerOrErrorResult_free =
      _rune_result_IntegerOrErrorResult_free_ptr
          .asFunction<_dart_rune_result_IntegerOrErrorResult_free>();

  /// \brief
  /// Get a reference to the `usize` in this `IntegerOrErrorResult`, or `null` if
  /// not present.
  ffi.Pointer<ffi.Uint64> rune_result_IntegerOrErrorResult_get_ok(
    ffi.Pointer<IntegerOrErrorResult> result,
  ) {
    return _rune_result_IntegerOrErrorResult_get_ok(
      result,
    );
  }

  late final _rune_result_IntegerOrErrorResult_get_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_IntegerOrErrorResult_get_ok>>(
          'rune_result_IntegerOrErrorResult_get_ok');
  late final _dart_rune_result_IntegerOrErrorResult_get_ok
      _rune_result_IntegerOrErrorResult_get_ok =
      _rune_result_IntegerOrErrorResult_get_ok_ptr
          .asFunction<_dart_rune_result_IntegerOrErrorResult_get_ok>();

  /// \brief
  /// Get a reference to the `BoxedError` in this `IntegerOrErrorResult`, or `null`
  /// if not present.
  ffi.Pointer<ffi.Pointer<Error>> rune_result_IntegerOrErrorResult_get_err(
    ffi.Pointer<IntegerOrErrorResult> result,
  ) {
    return _rune_result_IntegerOrErrorResult_get_err(
      result,
    );
  }

  late final _rune_result_IntegerOrErrorResult_get_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_IntegerOrErrorResult_get_err>>(
          'rune_result_IntegerOrErrorResult_get_err');
  late final _dart_rune_result_IntegerOrErrorResult_get_err
      _rune_result_IntegerOrErrorResult_get_err =
      _rune_result_IntegerOrErrorResult_get_err_ptr
          .asFunction<_dart_rune_result_IntegerOrErrorResult_get_err>();

  /// \brief
  /// Extract the `usize`, freeing the `IntegerOrErrorResult` and crashing if it
  /// actually contains a `BoxedError`.
  int rune_result_IntegerOrErrorResult_take_ok(
    ffi.Pointer<IntegerOrErrorResult> result,
  ) {
    return _rune_result_IntegerOrErrorResult_take_ok(
      result,
    );
  }

  late final _rune_result_IntegerOrErrorResult_take_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_IntegerOrErrorResult_take_ok>>(
          'rune_result_IntegerOrErrorResult_take_ok');
  late final _dart_rune_result_IntegerOrErrorResult_take_ok
      _rune_result_IntegerOrErrorResult_take_ok =
      _rune_result_IntegerOrErrorResult_take_ok_ptr
          .asFunction<_dart_rune_result_IntegerOrErrorResult_take_ok>();

  /// \brief
  /// Extract the `BoxedError`, freeing the `IntegerOrErrorResult` and crashing if
  /// it actually contains a `usize`.
  ffi.Pointer<Error> rune_result_IntegerOrErrorResult_take_err(
    ffi.Pointer<IntegerOrErrorResult> result,
  ) {
    return _rune_result_IntegerOrErrorResult_take_err(
      result,
    );
  }

  late final _rune_result_IntegerOrErrorResult_take_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_IntegerOrErrorResult_take_err>>(
          'rune_result_IntegerOrErrorResult_take_err');
  late final _dart_rune_result_IntegerOrErrorResult_take_err
      _rune_result_IntegerOrErrorResult_take_err =
      _rune_result_IntegerOrErrorResult_take_err_ptr
          .asFunction<_dart_rune_result_IntegerOrErrorResult_take_err>();

  /// \brief
  /// Check if the result contains a `BoxedCapability`.
  bool rune_result_CapabilityResult_is_ok(
    ffi.Pointer<CapabilityResult> result,
  ) {
    return _rune_result_CapabilityResult_is_ok(
          result,
        ) !=
        0;
  }

  late final _rune_result_CapabilityResult_is_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_CapabilityResult_is_ok>>(
          'rune_result_CapabilityResult_is_ok');
  late final _dart_rune_result_CapabilityResult_is_ok
      _rune_result_CapabilityResult_is_ok =
      _rune_result_CapabilityResult_is_ok_ptr
          .asFunction<_dart_rune_result_CapabilityResult_is_ok>();

  /// \brief
  /// Check if the result contains a `BoxedError`.
  bool rune_result_CapabilityResult_is_err(
    ffi.Pointer<CapabilityResult> result,
  ) {
    return _rune_result_CapabilityResult_is_err(
          result,
        ) !=
        0;
  }

  late final _rune_result_CapabilityResult_is_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_CapabilityResult_is_err>>(
          'rune_result_CapabilityResult_is_err');
  late final _dart_rune_result_CapabilityResult_is_err
      _rune_result_CapabilityResult_is_err =
      _rune_result_CapabilityResult_is_err_ptr
          .asFunction<_dart_rune_result_CapabilityResult_is_err>();

  /// \brief
  /// Free the `CapabilityResult` after you are done with it.
  void rune_result_CapabilityResult_free(
    ffi.Pointer<CapabilityResult> result,
  ) {
    return _rune_result_CapabilityResult_free(
      result,
    );
  }

  late final _rune_result_CapabilityResult_free_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_CapabilityResult_free>>(
          'rune_result_CapabilityResult_free');
  late final _dart_rune_result_CapabilityResult_free
      _rune_result_CapabilityResult_free =
      _rune_result_CapabilityResult_free_ptr
          .asFunction<_dart_rune_result_CapabilityResult_free>();

  /// \brief
  /// Get a reference to the `BoxedCapability` in this `CapabilityResult`, or
  /// `null` if not present.
  ffi.Pointer<ffi.Pointer<Capability_t>> rune_result_CapabilityResult_get_ok(
    ffi.Pointer<CapabilityResult> result,
  ) {
    return _rune_result_CapabilityResult_get_ok(
      result,
    );
  }

  late final _rune_result_CapabilityResult_get_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_CapabilityResult_get_ok>>(
          'rune_result_CapabilityResult_get_ok');
  late final _dart_rune_result_CapabilityResult_get_ok
      _rune_result_CapabilityResult_get_ok =
      _rune_result_CapabilityResult_get_ok_ptr
          .asFunction<_dart_rune_result_CapabilityResult_get_ok>();

  /// \brief
  /// Get a reference to the `BoxedError` in this `CapabilityResult`, or `null` if
  /// not present.
  ffi.Pointer<ffi.Pointer<Error>> rune_result_CapabilityResult_get_err(
    ffi.Pointer<CapabilityResult> result,
  ) {
    return _rune_result_CapabilityResult_get_err(
      result,
    );
  }

  late final _rune_result_CapabilityResult_get_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_CapabilityResult_get_err>>(
          'rune_result_CapabilityResult_get_err');
  late final _dart_rune_result_CapabilityResult_get_err
      _rune_result_CapabilityResult_get_err =
      _rune_result_CapabilityResult_get_err_ptr
          .asFunction<_dart_rune_result_CapabilityResult_get_err>();

  /// \brief
  /// Extract the `BoxedCapability`, freeing the `CapabilityResult` and crashing if
  /// it actually contains a `BoxedError`.
  ffi.Pointer<Capability_t> rune_result_CapabilityResult_take_ok(
    ffi.Pointer<CapabilityResult> result,
  ) {
    return _rune_result_CapabilityResult_take_ok(
      result,
    );
  }

  late final _rune_result_CapabilityResult_take_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_CapabilityResult_take_ok>>(
          'rune_result_CapabilityResult_take_ok');
  late final _dart_rune_result_CapabilityResult_take_ok
      _rune_result_CapabilityResult_take_ok =
      _rune_result_CapabilityResult_take_ok_ptr
          .asFunction<_dart_rune_result_CapabilityResult_take_ok>();

  /// \brief
  /// Extract the `BoxedError`, freeing the `CapabilityResult` and crashing if it
  /// actually contains a `BoxedCapability`.
  ffi.Pointer<Error> rune_result_CapabilityResult_take_err(
    ffi.Pointer<CapabilityResult> result,
  ) {
    return _rune_result_CapabilityResult_take_err(
      result,
    );
  }

  late final _rune_result_CapabilityResult_take_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_CapabilityResult_take_err>>(
          'rune_result_CapabilityResult_take_err');
  late final _dart_rune_result_CapabilityResult_take_err
      _rune_result_CapabilityResult_take_err =
      _rune_result_CapabilityResult_take_err_ptr
          .asFunction<_dart_rune_result_CapabilityResult_take_err>();

  ffi.Pointer<RunicosBaseImage> rune_image_new() {
    return _rune_image_new();
  }

  late final _rune_image_new_ptr =
      _lookup<ffi.NativeFunction<_c_rune_image_new>>('rune_image_new');
  late final _dart_rune_image_new _rune_image_new =
      _rune_image_new_ptr.asFunction<_dart_rune_image_new>();

  void rune_image_free(
    ffi.Pointer<RunicosBaseImage> image,
  ) {
    return _rune_image_free(
      image,
    );
  }

  late final _rune_image_free_ptr =
      _lookup<ffi.NativeFunction<_c_rune_image_free>>('rune_image_free');
  late final _dart_rune_image_free _rune_image_free =
      _rune_image_free_ptr.asFunction<_dart_rune_image_free>();

  /// \brief
  /// Set the closure to be called when the Rune emits log messages.
  void rune_image_set_log(
    ffi.Pointer<RunicosBaseImage> image,
    BoxDynFnMut1_RuneResult_ptr_LogRecord_t log,
  ) {
    return _rune_image_set_log(
      image,
      log,
    );
  }

  late final _rune_image_set_log_ptr =
      _lookup<ffi.NativeFunction<_c_rune_image_set_log>>('rune_image_set_log');
  late final _dart_rune_image_set_log _rune_image_set_log =
      _rune_image_set_log_ptr.asFunction<_dart_rune_image_set_log>();

  void rune_image_set_raw(
    ffi.Pointer<RunicosBaseImage> image,
    BoxDynFnMut0_CapabilityResult_ptr_t raw,
  ) {
    return _rune_image_set_raw(
      image,
      raw,
    );
  }
